feat: Add new dependencies and enhance booking interface
Introduces support for external booking systems, PMS integration, and enhanced reporting by:
- Adding dependencies for XLSX, FullCalendar, and react-hot-toast.
- Expanding the `Booking` interface with fields for nights, pricing, payment status, and OTA integration.
- Correcting an enum typo in `CustomerType`.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
-    "recharts": "https://esm.sh/recharts@^3.6.0"
+    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "xlsx": "https://esm.sh/xlsx@^0.18.5",
+    "react-hot-toast": "https://esm.sh/react-hot-toast@^2.6.0",
+    "@fullcalendar/resource-timeline": "https://esm.sh/@fullcalendar/resource-timeline@^6.1.20",
+    "@fullcalendar/interaction": "https://esm.sh/@fullcalendar/interaction@^6.1.20",
+    "@fullcalendar/react": "https://esm.sh/@fullcalendar/react@^6.1.20",
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai@^0.24.1"
   }
 }
 </script>
